fix: overflow hidden and elipse for text

--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -2,5 +2,5 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  padding: 25px 30px 31px 21px;
+  padding: 23px 20px 31px 21px;
  }
