--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -4,7 +4,7 @@
   line-height: 17px;
   border: none;
   border-bottom: 1px solid #00000020;
-  margin-top: 54px;
+  margin-top: 48px;
   box-sizing: border-box;
   height: 27px;
   padding-bottom: 13px;
