--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -21,5 +21,6 @@
 
   .popup__submit-btn {
     margin-top: 45px;
+    height: 46px;
   }
 }
