--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -6,6 +6,7 @@
   line-height: 48px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 @media (max-width: 700px) {
