--- a/blocks/profile/__user-occupation/profile__user-occupation.css
+++ b/blocks/profile/__user-occupation/profile__user-occupation.css
@@ -5,6 +5,9 @@
   font-size: 18px;
   line-height: 22px;
   grid-column: 1 / span 2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media (max-width: 700px) {
